# kmc

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  code_changes_and_plugin_fix.ipynb  pyproject.toml  setup.py  test_direct_import.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: SYNTAX.md  TESTING.md
docs/feature/: auto_discovery.md
docs/feature/auto_discovery/: implementation.md
examples/: frontend_integration.py  kimfe_integration.py  llamaindex.py  llamaindex_plugin.py
examples/auto_discovery_example/: example_plugin.py
examples/expansible_architecture/: README.md  demo.py
examples/quick_start/: auto_discovery_example.py  auto_register_example.py  kmc_example.py  markdown_kmc.md  readme.md
kmc_parser/: __init__.py  config.ipynb  models.py  parser.py  test.py
kmc_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kmc_parser/core/: __init__.py  registry.py
kmc_parser/extensions/: __init__.py  api_plugin.py  auto_discovery.py  plugin_base.py  plugin_llamaindex.py  plugin_manager.py
kmc_parser/extensions/lib/: kmc_llamaindex_ext.py  llamaindex.py
kmc_parser/extensions/template_maker/: integrated_flow.py  template_maker.py
kmc_parser/handlers/: __init__.py  base.py
kmc_parser/handlers/context/: __init__.py  project.py
kmc_parser/handlers/generative/: __init__.py
kmc_parser/handlers/generative/ai/: __init__.py  gpt4.py
kmc_parser/handlers/metadata/: __init__.py  doc.py
kmc_parser/integrations/: __init__.py  itscop.py  llamaindex.py
kmc_parser/prompts/: kmc_syntax_consistency_updater.prompt.md  kmc_template_constuctor.prompt.md  kmc_template_generator.prompt.md  kmc_template_preprocessor.prompt.md  kmc_template_reviewer.prompt.md
kmc_parser/tests/: __init__.py  conftest.py  test_auto_discovery.py  test_auto_register.py  test_parser.py
kmc_parser/tests/test_plugins/: __init__.py  test_plugin.py
tests/: test_hello_world.py  test_variable_definition.py
