[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmc-parser"
version = "0.1.0"
description = "Kimfe Markdown Convention Parser - Un parser para plantillas inteligentes con LLMs"
authors = [
    {name = "Kimfe Team", email = "giorgio@reevolutiva.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["markdown", "llm", "template", "ai", "kimfe"]
dependencies = [
    "regex>=2022.1.18",
    "llama-index>=0.8.0",
    "psycopg2-binary==2.9.9",
    "llama-index-vector-stores-supabase",
]

[project.urls]
Homepage = "https://kimfe.com"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "isort>=5.10.1", 
    "mypy>=0.941",
    "llama-index-llms-azure-openai",
    "llama-index-embeddings-azure-openai",
    "supabase",
]
langchain = [
    "langchain>=0.0.200",
]
crewai = [
    "crewai>=0.1.0",
]

[tool.setuptools]
packages = ["kmc_parser"]